@startuml

title __VERARBEITUNG's Class Diagram__\n

    namespace verarbeitung {
      class verarbeitung.Girokonto {
          # kontostandVermindern()
      }
    }
  

    namespace verarbeitung {
      abstract class verarbeitung.Konto {
          + abheben()
          {abstract} # kontostandVermindern()
      }
    }

    namespace verarbeitung {
      class verarbeitung.Sparbuch {
          # kontostandVermindern()
      }
    }

  verarbeitung.Girokonto -up-|> verarbeitung.Konto
  verarbeitung.Sparbuch -up-|> verarbeitung.Konto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
